Fixing layout issues in regards to price and qty boxes

--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_catalog-product.scss
@@ -242,7 +242,8 @@
         }
 
         .price-info {
-            width: 100%;
+            width: auto;
+            float:left;
             position: relative;
 
             .price-box .price, .price {
